ops/kubernetes/blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
spec:
  replicas: 10
  selector:
    matchLabels:
      app: blog
  strategy:
    rollingUpdate:
      maxSurge: 10
      maxUnavailable: 2
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: edenr/blog:latest
        resources:
          requests:
            cpu: "200m"
            memory: "499Mi"
          limits:
            cpu: "200m"
            memory: "499Mi"
        ports:
          - containerPort: 3000
        readinessProbe:
          httpGet:
            port: 3000
            path: /healthcheck
        livenessProbe:           
          httpGet:
            port: 3000
            path: /healthcheck
        imagePullPolicy: Always
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  selector:
    app: blog
  ports:
  - port: 8080
    targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - eden-reich.com
    - www.eden-reich.com
    secretName: eden-reich.com-tls
  rules:  
    - host: eden-reich.com
      http:
        paths:
        - path: /
          backend:
            serviceName: blog
            servicePort: 8080
    - host: www.eden-reich.com
      http:
        paths:
        - path: /
          backend:
            serviceName: blog
            servicePort: 8080
