ops/kubernetes/stage-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
  - hosts:
    - stage.eden-reich.com
    - stage-admin.eden-reich.com
    secretName: eden-reich.com-tls
  rules:  
    - host: stage.eden-reich.com
      http:
        paths:
        - path: /
          backend:
            serviceName: blog-frontend
            servicePort: 8080
    - host: stage-admin.eden-reich.com
      http:
        paths:
        - path: /
          backend:
            serviceName: blog-admin
            servicePort: 8080
